Adiciona novas atividades extracurriculares e validação de inscrição

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Colégio Mergington</h1>
+      <h1>Colégio COPILOT GOVBR</h1>
       <h2>Atividades Extracurriculares</h2>
     </header>
 
